{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 51,
  "lineage": "a7cffe9d-3523-905f-dd7b-729ae3b32892",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "group4_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005fc0f236362e99f",
            "arn": "arn:aws:ec2:us-east-1:590184141018:instance/i-01f746f24563d0fc4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01f746f24563d0fc4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "group4",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07be8fe753f276620",
            "private_dns": "ip-10-0-1-36.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.36",
            "public_dns": "ec2-18-234-155-22.compute-1.amazonaws.com",
            "public_ip": "18.234.155.22",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02f5e58a968ca96d6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-026ac44ebc7669723",
            "tags": {
              "Name": "devops-group-4"
            },
            "tags_all": {
              "Name": "devops-group-4"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-095902ec9e5f7fada"
            ]
          },
          "dependencies": [
            "aws_security_group.group4_sg",
            "aws_subnet.group4_subnet",
            "aws_vpc.group4_vpc",
            "data.aws_ami.group4_ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "group4_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184141018:internet-gateway/igw-0a80845aab39c0de4",
            "id": "igw-0a80845aab39c0de4",
            "owner_id": "590184141018",
            "tags": {
              "Name": "devops-group-4"
            },
            "tags_all": {
              "Name": "devops-group-4"
            },
            "vpc_id": "vpc-0b95931fe4b25b2b6"
          },
          "dependencies": [
            "aws_vpc.group4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "group4_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a80845aab39c0de4",
            "id": "r-rtb-091c14896513e7b101080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-091c14896513e7b10",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.group4_igw",
            "aws_route_table.group4_public_rt",
            "aws_vpc.group4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "group4_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184141018:route-table/rtb-091c14896513e7b10",
            "id": "rtb-091c14896513e7b10",
            "owner_id": "590184141018",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "devops-group-4"
            },
            "tags_all": {
              "Name": "devops-group-4"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b95931fe4b25b2b6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.group4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "group4_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a34e788dfc55490",
            "route_table_id": "rtb-091c14896513e7b10",
            "subnet_id": "subnet-026ac44ebc7669723"
          },
          "dependencies": [
            "aws_route_table.group4_public_rt",
            "aws_subnet.group4_subnet",
            "aws_vpc.group4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "group4_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184141018:security-group/sg-095902ec9e5f7fada",
            "description": "Allow inbound traffic on port 22 and 80",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-095902ec9e5f7fada",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "devops-group-4",
            "name_prefix": "",
            "owner_id": "590184141018",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b95931fe4b25b2b6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.group4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "group4_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184141018:subnet/subnet-026ac44ebc7669723",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-026ac44ebc7669723",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "590184141018",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-group-4"
            },
            "tags_all": {
              "Name": "devops-group-4"
            },
            "vpc_id": "vpc-0b95931fe4b25b2b6"
          },
          "dependencies": [
            "aws_vpc.group4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "group4_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184141018:vpc/vpc-0b95931fe4b25b2b6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b0ac9507d11678a4",
            "default_route_table_id": "rtb-06b8910d284f875a2",
            "default_security_group_id": "sg-0cad424d490ca67ef",
            "dhcp_options_id": "dopt-0aafbb69718a6bf3e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b95931fe4b25b2b6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06b8910d284f875a2",
            "owner_id": "590184141018",
            "tags": {
              "Name": "devops-group-4"
            },
            "tags_all": {
              "Name": "devops-group-4"
            }
          }
        }
      ]
    }
  ]
}